--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "@discordjs/builders": "^0.13.0",
     "@discordjs/rest": "^0.4.1",
-    "discord.js": "^13.7.0"
+    "discord.js": "^13.7.0",
+    "jquery": "^3.6.0",
+    "prettier": "^2.6.2",
+    "prettier-json": "^1.0.0"
   }
 }
