--- a/package.json
+++ b/package.json
@@ -7,5 +7,6 @@
     "@discordjs/rest": "^0.5.0",
     "discord-api-types": "^0.33.3",
     "discord.js": "^13.7.0",
-  }
+  },
+  "main": "discord/discord_index.js"
 }
