--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@discordjs/builders": "^0.14.0",
     "@discordjs/rest": "^0.5.0",
     "discord-api-types": "^0.33.3",
-    "discord.js": "^13.7.0",
+    "discord.js": "^13.7.0"
   },
   "main": "discord/discord_index.js"
 }
