--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "discord-api-types": "^0.33.3",
     "discord.js": "^13.7.0"
   },
-  "main": "discord/discord_index.js"
+  "main": "discord/discord_index.js",
+  "scripts": {
+    "start": "node discord/discord.js"
+  }
 }
