--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@discordjs/rest": "^0.5.0",
     "discord-api-types": "^0.33.3",
     "discord.js": "^13.7.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "http": "^0.0.1-security"
   },
   "main": "discord/discord_index.js",
   "scripts": {
-    "start": "node discord/discord.js"
+    "start": "node discord/discord.js",
+    "sleep": "node discord/sleeper.js"
   }
 }
